Typed subjects (#34)
* Auth refactor
